# parking_manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  dump.rdb  main.py  pyproject.toml  test.ipynb
.github/: realise.yml
.github/workflows/: tests_workflows_main.yml
app/api/: main.py  run_all.py  test.ipynb
app/api/databases/: users.db  users_drive.db
app/api/modules/: database.py  tables.py
app/api/repositories/: products_repo.py  products_repop.py  user_repo.py
app/api/routers/: drive_routers.py  user_routers.py
app/api/schemas/: product_schemas.py  user_schemas.py
app/api/security/: jwt_auth.py  security.py
app/api/services/: drive_services.py  user_services.py  utils.py
app/api/utils/: auth_wrapper.py  user_wrapper.py
app/celery/: celery_drive.py  setting_celery.py
app/models/: prediction.py
config/: .env  setting.py
log_config/: __init__.py  logger_config.py
migrations/: env.py
migrations/versions/: 14a0ca4be776_create_first_user.py  add_role_to_users.py  e58ddd96285e_init.py
