[project]
name = "parking-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.13",
]
