[project]
name = "parking-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "black>=26.1.0",
    "easyocr>=1.7.2",
    "fastapi>=0.129.0",
    "httpx[http2]>=0.28.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "secretstr>=0.1.0",
    "sqlalchemy>=2.0.46",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.13",
    "uvicorn>=0.41.0",
]
